--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
   <groupId>com.epam.gitLearn</groupId>
   <artifactId>gitLearn</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>module2</module>
+  </modules>
 
   <name>gitLearn</name>
 
